apps/kong-lens/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong-lens-app
  labels:
    app: kong-lens-app
spec:
  selector:
    matchLabels:
      app: kong-lens-app
  replicas: 2
  template:
    metadata:
      labels:
        app: kong-lens-app
    spec:
      imagePullSecrets:
        - name: dockerhub-creds
      containers:
        - image: gowthamrajselvam/kong-lens:23
          name: kong-lens-app
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 200m
              memory: 512Mi
          ports:
            - containerPort: 80
