apps/kong-lens/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong-lens-app
  labels:
    run: kong-lens-app
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: kong-lens-app
  type: LoadBalancer
